--- a/flex-project.css
+++ b/flex-project.css
@@ -15,6 +15,12 @@ li
     margin-right: 10px;
 }
 
+body 
+{
+    display: flex;
+    flex-direction: column;
+    flex: 0 1 auto;
+}
 .header
 {
     background-color: #1F2937;
@@ -22,4 +28,62 @@ li
     justify-content: space-around;
     display: flex;
     align-items: center;
+    padding: 20px;
+    gap: 150px;
+}
+
+.responsive
+{
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+}
+
+.hero
+{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex: 0 1 300px;
+}
+
+.body
+{
+    background-color: #1F2937;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 40px;
+}
+
+.card img
+{
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 15px;
+}
+.info
+{
+    display: flex;
+    gap: 50px;
+    margin: auto;
+    justify-content: center;
+    padding: 40px;
+}
+
+.card
+{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex: 0 1 250px;
+    text-align: center;
+}
+
+.header2
+{
+    display: flex;
+    justify-content: center;
+    padding-top: 40px;
 }
